--- a/lex.html
+++ b/lex.html
@@ -62,7 +62,7 @@
                  data-count= "none"
                  data-url= "http://lexiphilia.com"
                  >
-                Tweet
+                Tweeter
             </a>
         </div>
     </footer>
