added comment about buttons

--- a/lex.html
+++ b/lex.html
@@ -52,6 +52,7 @@
         </div>
     </div>
 
+<!-- this section controls the buttons-->
     <footer>
         <div class = "random-button">
             <p class= "button">randomizer</p>
