added bird picture

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                  data-count= "none"
                  data-url= "http://lexiphilia.com"
                  >
-                Tweeter
+                <img src= "twitter-gray.png">
             </a>
         </div>
     </footer>
