changed bird to image

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                  data-size="large"
                  
                  data-count= "none"
-                 data-url= "http://lexiphilia.com"
+                 
                  >
-                <img src= "twitter-gray.png">
+                <img src= "images/twitter-gray.png">
             </a>
         </div>
     </footer>
